Print error message and stacktrace if present
Signed-off-by: Johannes Thorn <johthor@users.noreply.github.com>